--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-to-pdf",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
