--- a/.github/workflows/main_html-to-pdf-api.yml
+++ b/.github/workflows/main_html-to-pdf-api.yml
@@ -27,6 +27,15 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: release.zip
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
